# Network_snapping

./: .gitignore  CMakeLists.txt  Constraints.h  Data.cc  Data.h  README.md  WritingTempResultCallback.h  history.utils.cc  simple_snapping.cc  simple_snapping.files  utils_function.h
data/: data_source.txt  optimisation_output.csv  simple_example.csv
data/data_in_reduced_export_area/: all_objects_bbox.shp  all_objects_bbox.shx  edges_for_output_in_export_area.csv  nodes_for_output_in_export_area.csv  obs_for_output_in_export_area.csv  reduced_area.csv  reduced_area_4.prj  reduced_area_4.shp  reduced_area_4.shx  snapping_constraints.qml  snapping_output.csv  snapping_output_full.qml
data/street_gen_after_optim/: street_gen_after_optim.qgs
data/test_object/: test.txt
dev_io/: Data.cc  Data.h
script/: convert_bdtopo_to_input_for_snapping.sql  convert_object_to_input_for_snapping.sql  convert_odparis_to_input_for_snapping.sql  import_result_into_streetgen.sql  segmenting_axis_with_border.sql  temp_target_slopes.sql
using_ceres/: .gitignore  CMakeLists.txt  Constraints.cc  Constraints.h  Data.cc  Data.h  Parameters.cc  Parameters.h  WritingTempResultCallback.h  enum_functions.cc  enum_functions.h  geometry_function.cc  geometry_function.h  history.utils.cc  parameters.txt  simple_snapping.cc  simple_snapping.files  time_measurement.h  utils_function.h
using_ceres/data/: optimisation_output.csv  simple_example.csv
visu/: Présentation_total.ppt
visu/visu_inqgis_timemanager/: simple_test.csv  test_time_manager.csv  test_time_manager_wkt.csv  visu_timemanager.qgs
(+27 files in other folders)
